--- a/static/css/viewer.css
+++ b/static/css/viewer.css
@@ -86,6 +86,8 @@ body {
 	height: 100%;
 	inset: 32px 0 0 200px;
 	overflow: auto;
+	text-align: center;
+	background: #6c757d;
 }
 
 /* Buttons, Fields, Labels, Selects */
