--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -170,17 +170,17 @@ ul.teams-list li {
 /*
  * Profile image style
  */
-.large_image{
+.large-image{
     height: 120px;
     width: 120px;
 }
 
-.medium_image{
+.medium-image{
     height: 70px;
     width: 70px;
 }
 
-.small_image{
+.small-image{
     height: 20px;
     width: 20px;
 }
@@ -207,6 +207,10 @@ ul.teams-list li {
     width: 0.1px;
     height: 0.1px;
     position: absolute;
+}
+
+.avatar-selected {
+    border: 4px solid #1463f3;
 }
 
 /*  
