--- a/tasks/templates/upload_file.html
+++ b/tasks/templates/upload_file.html
@@ -29,23 +29,46 @@
                     <label class="flex flex-col rounded-lg border-4 border-dashed w-full h-60 p-10 group text-center">
                         <div class="h-full w-full text-center flex flex-col items-center justify-center items-center">
                             <div class="flex flex-auto max-h-48 w-2/5 mx-auto -mt-2 p-4">
-                                <svg t="1709394247559" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="6773" width="70" height="70"><path d="M131.3 376.7H64.2v483.2c0 37.1 30.3 67.3 67.1 67.3H892c37 0 67.1-30.3 67.1-67.3V376.7H131.3z m768.3-164.1H798.2c-2 0-4 0.1-6.1 0.3h-306v-54.6c0-33.2-26.9-60.1-60-60.1H124.5c-33.2 0-60 27-60 60.1v174h894.9V272.4c-0.1-32.9-27-59.8-59.8-59.8z" fill="" p-id="6774"></path></svg>
+                                <svg t="1709394247559" id="file-icon" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="6773" width="70" height="70"><path d="M131.3 376.7H64.2v483.2c0 37.1 30.3 67.3 67.1 67.3H892c37 0 67.1-30.3 67.1-67.3V376.7H131.3z m768.3-164.1H798.2c-2 0-4 0.1-6.1 0.3h-306v-54.6c0-33.2-26.9-60.1-60-60.1H124.5c-33.2 0-60 27-60 60.1v174h894.9V272.4c-0.1-32.9-27-59.8-59.8-59.8z" fill="" p-id="6774"></path></svg>
+                                <svg t="1709500412224" id="success-icon" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="4991" width="70" height="70"><path d="M512 929.959184c-230.4 0-417.959184-187.559184-417.959184-417.959184s187.559184-417.959184 417.959184-417.959184 417.959184 187.559184 417.959184 417.959184-187.559184 417.959184-417.959184 417.959184z" fill="#16C4AF" p-id="4992"></path><path d="M459.755102 637.387755c-5.22449 0-10.44898-2.089796-14.628571-6.269388l-104.489796-104.489796c-8.359184-8.359184-8.359184-21.420408 0-29.779591 8.359184-8.359184 21.420408-8.359184 29.779592 0l104.489795 104.489796c8.359184 8.359184 8.359184 21.420408 0 29.779591-4.702041 4.179592-9.926531 6.269388-15.15102 6.269388z" fill="#DCFFFA" p-id="4993"></path><path d="M459.755102 637.387755c-5.22449 0-10.44898-2.089796-14.628571-6.269388-8.359184-8.359184-8.359184-21.420408 0-29.779591l208.979591-208.979592c8.359184-8.359184 21.420408-8.359184 29.779592 0 8.359184 8.359184 8.359184 21.420408 0 29.779592l-208.979592 208.979591c-4.702041 4.179592-9.926531 6.269388-15.15102 6.269388z" fill="#DCFFFA" p-id="4994"></path></svg>
                             </div>
-                            <p class="pointer-none text-gray-500 "><span class="text-sm">Drag & Drop</span> files here <br/></p>
+                            <p class="pointer-none text-gray-500 " id="upload-instruction"><span class="text-sm">Drag & Drop</span> files here <br/></p>
+                            <p class="pointer-none text-gray-500 " id="success-alert"><span class="text-sm">File Select Success! Click Upload!</span><br/></p>
+
                             <div style="display: none">
                                 {{ form.file }}
                             </div>
                         </div>
                     </label>
                 </div>
+                <p class="text-sm text-gray-300">
+                    <span>File type: only pdf types of files</span>
 
-                 <li class="list-group-item d-flex justify-content-between align-items-start">
-                    <div class="ms-2 me-auto">
-                      <div class="fw-bold">{{  }}</div>
-                      Content for list item
+                </p>
+            {% if file_url and simple_file_name %}
+
+                <div class="uploaded uploaded-file">
+                    <div class="file-content">
+                        <div class="file-icon">
+                            <svg t="1709406002447" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="5070" width="30" height="30">
+                                <path d="M531.3 574.4l0.3-1.4c5.8-23.9 13.1-53.7 7.4-80.7-3.8-21.3-19.5-29.6-32.9-30.2-15.8-0.7-29.9 8.3-33.4 21.4-6.6 24-0.7 56.8 10.1 98.6-13.6 32.4-35.3 79.5-51.2 107.5-29.6 15.3-69.3 38.9-75.2 68.7-1.2 5.5 0.2 12.5 3.5 18.8 3.7 7 9.6 12.4 16.5 15 3 1.1 6.6 2 10.8 2 17.6 0 46.1-14.2 84.1-79.4 5.8-1.9 11.8-3.9 17.6-5.9 27.2-9.2 55.4-18.8 80.9-23.1 28.2 15.1 60.3 24.8 82.1 24.8 21.6 0 30.1-12.8 33.3-20.5 5.6-13.5 2.9-30.5-6.2-39.6-13.2-13-45.3-16.4-95.3-10.2-24.6-15-40.7-35.4-52.4-65.8zM421.6 726.3c-13.9 20.2-24.4 30.3-30.1 34.7 6.7-12.3 19.8-25.3 30.1-34.7z m87.6-235.5c5.2 8.9 4.5 35.8 0.5 49.4-4.9-19.9-5.6-48.1-2.7-51.4 0.8 0.1 1.5 0.7 2.2 2z m-1.6 120.5c10.7 18.5 24.2 34.4 39.1 46.2-21.6 4.9-41.3 13-58.9 20.2-4.2 1.7-8.3 3.4-12.3 5 13.3-24.1 24.4-51.4 32.1-71.4z m155.6 65.5c0.1 0.2 0.2 0.5-0.4 0.9h-0.2l-0.2 0.3c-0.8 0.5-9 5.3-44.3-8.6 40.6-1.9 45 7.3 45.1 7.4z" p-id="5071"></path>
+                                <path d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326z m1.8 562H232V136h302v216c0 23.2 18.8 42 42 42h216v494z" p-id="5072"></path>
+                            </svg>
+                        </div>
+                        <div class="file-info">
+                            <div class="file-name">
+                                <span>
+                                        <p><a href="{{ file_url }}">{{ simple_file_name }}</a></p>
+                                </span>
+                            </div>
+                            <div class="progress" style="width: 200px;">
+                                <div class="progress-bar bg-success progress-bar-striped progress-bar-animated" style="width:100%"></div>
+                            </div>
+                        </div>
                     </div>
-                    <span class="badge text-bg-primary rounded-pill">14</span>
-                 </li>
+                    <button type="button" class="btn-close btn-sm" aria-label="Close"></button>
+                </div>
+            {% endif %}
 
                 <div class="flex justify-center">
                     <button type="submit" class="my-5 w-full flex justify-center bg-blue-500 text-gray-100 p-4  rounded-full tracking-wide font-semibold  focus:outline-none focus:shadow-outline hover:bg-blue-600 shadow-lg cursor-pointer transition ease-in duration-300">
@@ -55,7 +78,66 @@
             </form>
         </div>
     </div>
+</div>
+</div>
 
+<script>
+    /**
+     * close button
+     * @type {NodeListOf<Element>}
+     */
+    var closeButtons = document.querySelectorAll('.btn-close');
+
+    // Loop through each close button
+    closeButtons.forEach(function(button) {
+        button.addEventListener('click', function() {
+            var parentDiv = button.closest('.uploaded-file');
+            if (parentDiv) {
+                parentDiv.remove();
+            }
+        });
+    });
+
+    /**
+     *  form upload listener
+    */
+        document.addEventListener('DOMContentLoaded', function () {
+        // 获取元素
+        var fileIcon = document.getElementById('file-icon');
+        var successIcon = document.getElementById('success-icon');
+        var uploadInstruction = document.getElementById('upload-instruction');
+        var successAlert = document.getElementById('success-alert');
+        var fileInput = document.querySelector('input[type="file"]');
+
+        // 隐藏成功图标和成功提示
+        successIcon.style.display = 'none';
+        successAlert.style.display = 'none';
+
+        // 监听文件选择事件
+        fileInput.addEventListener('change', function () {
+            // 如果有文件被选择
+            if (fileInput.files.length > 0) {
+                // 隐藏文件图标和上传提示，显示成功图标和成功提示
+                fileIcon.style.display = 'none';
+                successIcon.style.display = 'block';
+                uploadInstruction.style.display = 'none';
+                successAlert.style.display = 'block';
+            }
+        });
+
+        // 监听表单提交事件
+        document.querySelector('form').addEventListener('submit', function () {
+            // 检查是否有文件被选择
+            if (fileInput.files.length === 0) {
+                // 如果没有文件被选择，则阻止表单提交
+                alert('Please select a file!');
+                event.preventDefault();
+            }
+        });
+    });
+
+
+</script>
 
 {#        <form class="mt-8 space-y-3" id="pdf-upload-form" action="{% url 'upload_file' %}" method="post" enctype="multipart/form-data">#}
 {#            {% csrf_token %}#}
