--- a/tasks/templates/filelist.html
+++ b/tasks/templates/filelist.html
@@ -58,8 +58,13 @@
                             </a>
 
                             <!-- Comment PDF -->
-                            <button type="button" class="btn btn-success equal-size open-modal" data-upload-id="{{ upload.id }}">
+                            <button type="button" class="btn btn-success equal-size open-modal" data-upload-id="{{ upload.id }}" data-bs-target="#commentModal_{{ upload.id }}" data-bs-toggle="modal">
                                 <i class="bi bi-chat-dots"></i>
+                            </button>
+
+                            <!-- Rename PDF   -->
+                            <button type="button" class="btn btn-info equal-size open-modal" data-upload-id="{{ upload.id }}" data-bs-target="#renameModal_{{ upload.id }}" data-bs-toggle="modal">
+                                <svg t="1709502404971" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="5355" width="20" height="20"><path d="M290.27 614.65l-12.19 122.39c-0.81 8.04 5.06 15.21 13.09 16.02 0.51 0.05 1.02 0.08 1.54 0.07l121.91-12.68a13.16 13.16 0 0 0 9.26-3.9L834.95 324.5S706.22 193.33 706.21 193.33L294.66 605.87c-2.4 2.36-3.94 5.45-4.39 8.78zM949.52 159.18l-0.46-0.46-78.02-78.51a36.582 36.582 0 0 0-26.82-10.73 36.039 36.039 0 0 0-25.84 10.73l-71.68 74.61 130.68 130.2 71.68-74.12c14.41-14.16 14.61-37.31 0.46-51.72z" p-id="5356"></path><path d="M875.43 488.36c-26.93 0-48.76 21.83-48.76 48.76V857H161.54V232.35h335.98c26.93 0 48.76-21.83 48.76-48.76s-21.83-48.77-48.76-48.77H156.18c-0.49 0-0.98 0-1.47 0.01-50.9 0.81-91.5 42.72-90.69 93.61v633.92c0 50.9 41.26 92.16 92.16 92.16h676.34c50.52-0.27 91.41-41.16 91.68-91.67V537.12c-0.01-26.93-21.84-48.76-48.77-48.76z" p-id="5357"></path></svg>
                             </button>
                         </div>
                     </div>
@@ -72,12 +77,12 @@
 
 
 {% for upload in uploads %}
-<div class="modal fade" id="exampleModal_{{ upload.id }}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="commentModal_{{ upload.id }}" tabindex="-1" role="dialog" aria-labelledby="commentModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Description</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <h1 class="modal-title fs-5" id="commentModalLabel">Description</h1>
+                <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <form id="commentForm_{{ upload.id }}" action="{% url 'outer_comment_views' upload.id %}" method="post">
@@ -87,13 +92,35 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="submit" class="btn btn-primary save-button" data-upload-id="{{ upload.id }}">Save</button>
+                <button type="submit" class="btn btn-primary save-button" form="commentForm_{{ upload.id }}">Save</button>
             </div>
         </div>
     </div>
 </div>
 {% endfor %}
 
+{% for upload in uploads %}
+<div class="modal fade" id="renameModal_{{ upload.id }}" tabindex="-1" role="dialog" aria-labelledby="renameModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="renameModalLabel">New Name</h1>
+                <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form id="renameForm_{{ upload.id }}" action="{% url 'rename_upload' upload.id %}" method="post">
+                    {% csrf_token %}
+                    <label for="textInput">New File Name:</label>
+                    <input type="text" id="textInput" name="new_name">
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="submit" class="btn btn-primary save-button" form="renameForm_{{ upload.id }}">Save</button>
+            </div>
+        </div>
+    </div>
+</div>
+{% endfor %}
 
 
 
@@ -174,23 +201,35 @@
 {% endfor %}
 </body>
 
-
-<script>
-    /**
-     *  comment controller
-     */
-    $('.open-modal').click(function(){
-        var uploadId = $(this).data('upload-id');
-        var modalId = '#exampleModal_' + uploadId;
-        $(modalId).modal('show');
-    });
-
-    $('.save-button').click(function(){
-        var uploadId = $(this).data('upload-id');
-        var formId = '#commentForm_' + uploadId;
-        $(formId).submit();
-    });
-</script>
+{##}
+{#<script>#}
+{#    /**#}
+{#     *  comment controller#}
+{#     */#}
+{#    $('.open-modal').click(function(){#}
+{#        var uploadId = $(this).data('upload-id');#}
+{#        var modalId = '#commentModal_' + uploadId;#}
+{#        $(modalId).modal('show');#}
+{#    });#}
+{##}
+{#    $('.rename-modal').click(function(){#}
+{#        var uploadId = $(this).data('upload-id');#}
+{#        var modalId = '#renameModal_' + uploadId;#}
+{#        $(modalId).modal('show');#}
+{#    });#}
+{##}
+{#    $('.save-button').click(function(){#}
+{#        var uploadId = $(this).data('upload-id');#}
+{#        var formId = '#commentForm_' + uploadId;#}
+{#        $(formId).submit();#}
+{#    });#}
+{##}
+{#    $('.rename-save-button').click(function(){#}
+{#        var uploadId = $(this).data('upload-id');#}
+{#        var formId = '#renameForm_' + uploadId;#}
+{#        $(formId).submit();#}
+{#    });#}
+{#</script>#}
 
 
 
