--- a/static/css/viewer.css
+++ b/static/css/viewer.css
@@ -1,4 +1,121 @@
 * {
+    padding: 0;
+    margin: 0;
+    font: Helvetica;
+}
+
+html, body {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+
+body {
+    background-color: white;
+}
+
+#outerContainer {
+    width: 100%;
+    height: 100%;
+}
+
+#mainContainer {
+    position: absolute;
+    inset: 0;
+}
+
+/* Sidebar */
+#sidebar {
+    position: absolute;
+    inset: 32px 0 0;
+    height: 100%;
+    width: 200px;
+    z-index: 100;
+    background-color: #ECEFF4;
+}
+
+#sidebarToolbar {
+    position: absolute;
+    height: 32px;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #D8DEE9;
+}
+
+#sidebarViews {
+    position: absolute;
+    inset: 32px 0 0;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+}
+
+/* Toolbar */
+#toolbar {
+    position: absolute;
+    height: 32px;
+    width: 100%;
+    z-index: 999;
+    background-color: #ECEFF4;
+}
+
+#toolbarSections {
+    position: absolute;
+    height: 32px;
+    width: 100%;
+    padding: auto 4px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.toolbarSection {
+    display: flex;
+    flex-direction: row;
+}
+
+/* Viewer */
+#viewer {
+    position: absolute;
+    inset: 32px 0 0 0;
+    overflow:auto;
+}
+
+/* Buttons, Fields, Labels, Selects */
+.toolbarButton, .toolbarField, .toolbarLabel, #documentTitle, #fileName, .toolbarSelect {
+    height: 28px;
+    margin: 2px;
+}
+
+.toolbarButton, .toolbarField, .toolbarSelect {
+    width: 28px;
+}
+
+.toolbarField, #fileName, .toolbarSelect {
+    width: 32px;
+}
+
+.toolbarLabel, #documentTitle {
+    display: flex;
+    align-items: center;
+    user-select: none;
+}
+
+#documentTitle {
+    text-align: center;
+    font-size: 16px;
+}
+
+#fileName {
+    text-align: center;
+    font-size: 10px;
+}
+
+
+/*
+
+* {
 	padding: 0;
 	margin: 0;
 	font: Helvetica;
@@ -24,7 +141,7 @@ body {
 	inset: 0;
 }
 
-/* Sidebar */
+/* Sidebar 
 
 #sidebar {
 	position: absolute;
@@ -55,7 +172,7 @@ body {
 
 
 
-/* Toolbar */
+/* Toolbar 
 
 #toolbar {
 	position: absolute;
@@ -79,7 +196,7 @@ body {
 	flex-direction: row;
 }
 
-/* Viewer */
+/* Viewer 
 
 #viewer {
 	position: absolute;
@@ -88,7 +205,7 @@ body {
 	overflow: auto;
 }
 
-/* Buttons, Fields, Labels, Selects */
+/* Buttons, Fields, Labels, Selects 
 
 .toolbarButton {
 	height: 28px;
@@ -129,3 +246,5 @@ body {
 	font-size: 16px;
 	margin: 2px;
 }
+*/
+
