--- a/tasks/templates/partials/sidebar.html
+++ b/tasks/templates/partials/sidebar.html
@@ -24,14 +24,17 @@
                 {% endif %}
             </li>
             <li class="nav-item">
-                {% if request.path == share_file %}
-                    <a class="nav-link active text-center" aria-current="page" href="{% url 'share_file' %}">Share</a>
-                {%else%}
-                    <a class="nav-link text-center" aria-current="page" href="{% url 'share_file' %}">Share</a>
                 {% if request.path == upload_file %}
                     <a class="nav-link active text-center" aria-current="page" href="{% url 'upload_file' %}">Upload</a>
                 {%else%}
                     <a class="nav-link text-center" aria-current="page" href="{% url 'upload_file' %}">Upload</a>
+                {% endif %}
+            </li>
+            <li class="nav-item">
+                {% if request.path == share_file %}
+                    <a class="nav-link active text-center" aria-current="page" href="{% url 'share_file' %}">Share</a>
+                {%else%}
+                    <a class="nav-link text-center" aria-current="page" href="{% url 'share_file' %}">Share</a>
                 {% endif %}
             </li>
             <li class="nav-item">
