--- a/tasks/templates/partials/sidebar.html
+++ b/tasks/templates/partials/sidebar.html
@@ -45,7 +45,7 @@
                 {% endif %}
             </li>
             <li class="nav-item">
-                {% if request.path == team_list or request.path == create_team %}
+                {% if request.path == team_list or request.path == create_team or 'team_detail' in request.path %}
                     <a class="nav-link active text-center" aria-current="page" href="{% url 'team_list' %}">My Teams</a>
                 {%else%}
                     <a class="nav-link text-center" aria-current="page" href="{% url 'team_list' %}">My Teams</a>
