implement the functionality of search

--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -5,7 +5,6 @@
 }
 
 .start-button {
-
   background-color: rgb(155,35,33);
   border: 0;
   border-radius: 56px;
@@ -140,3 +139,20 @@ animation: slideIn 0.5s ease-in-out;
         transition: all .3s ease-in-out;
       }
 
+
+.searchbar-container {
+    max-width: 600px;
+    margin-left: auto;
+    margin-bottom: 20px;
+}
+
+.searchbar-container.row.justify-content-end {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+}
+
+.searchbar-container .col-md-6 {
+    flex: 0 0 auto;
+    width: auto;
+}
