--- a/tasks/templates/dashboard.html
+++ b/tasks/templates/dashboard.html
@@ -22,13 +22,24 @@
 </section>
 
 <div class="collapse" id="collapseExample">
-    <div class="get-start">
-        <div class="d-grid gap-2 col-6 mx-auto">
-            <button class="start-button" type="button" onclick="window.location='{% url 'upload_file' %}'">
-                Get Start
-            </button>
+{#    <div class="get-start">#}
+{#        <div class="d-grid gap-2 col-6 mx-auto">#}
+{#            <button class="start-button" type="button" onclick="window.location='{% url 'upload_file' %}'">#}
+{#                Get Start#}
+{#            </button>#}
+{#        </div>#}
+{#    </div>#}
+    <div class="searchbar-container row justify-content-end">
+        <div class="col-md-6">
+            <div class="form-inline justify-content-end">
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" id="searchInput">
+                </form>
+            </div>
         </div>
     </div>
+
+
     <a href="#" class="btn-outline-light" role="presentation">
         <div class="text-center">
           <div class="row">
@@ -109,6 +120,11 @@
         </div>
     </a>
 </div>
+
+<script>
+
+</script>
+
 </body>
 
 {% endblock %}
